opam-version: "2.0"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/certichain/toychain"
dev-repo: "git+https://github.com/certichain/toychain.git"
bug-reports: "https://github.com/certichain/toychain/issues"
license: "BSD-2-Clause"
synopsis: "Blockchain node extracted from verified minimalistic protocol"

build: [ make "-j%{jobs}%" "node" ]
depends: [
  "ocaml" {>= "4.06.0"}
  "coq" {(>= "8.9" & < "8.12~") | (= "dev")}
  "coq-mathcomp-ssreflect" {(>= "1.10.0") | (= "dev")}
  "coq-fcsl-pcm"
  "ocamlbuild" {build}
  "cryptokit"
  "ipaddr"
]

authors: [
  "Ilya Sergey"
  "George Pirlea"
  "Karl Palmskog"
]
